--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,22 +1,26 @@
-.CreateUniversity {
+.CreateUniversity,
+.CreateCertificate {
   background-color: #2c3e50;
   min-height: 100vh;
   color: white;
 }
 
-.UniversityDetails {
+.UniversityDetails,
+CerttificateDetails {
   background-color: #2c3e50;
   min-height: 100vh;
   color: white;
 }
 
-.UniversityInfo {
+.UniversityInfo,
+CerttificateInfo {
   background-color: #2c3e50;
   min-height: 100vh;
   color: white;
 }
 
-.UniversityList {
+.UniversityList,
+CerttificateList {
   background-color: #2c3e50;
   height: 100%;
   width: 100%;
@@ -75,4 +79,23 @@ img:hover {
 img:active {
   transform: scale(1);
   transition: all 0.3s ease;
+}
+.form-group {
+  margin: 10px 0;
+}
+.form-group label {
+  font-size: 1.2em;
+  font-weight: 400;
+}
+.form-group input,
+.form-group select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+.form-group input:focus,
+.form-group select:focus {
+  outline: none;
+  border: 1px solid #007bff;
 }
